--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div id="full">
-      <button id="light-switch">X</button>
-    </div>
+    <div class="full" id="on"></div>
   </body>
 </html>
