--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div class="full" id="on"></div>
+    <div class="full" id="off"></div>
   </body>
 </html>
